--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>لیست جلسات کورس گوارش</title>
+  <title>کورس فیزیولوژی گوارش - برنامه جلسات</title>
   <style>
     body {
       font-family: "Vazir", sans-serif;
-      background: #f5f5f5;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      background: #f4f4f4;
+      text-align: center;
       padding-top: 50px;
+      direction: rtl;
     }
 
     h1 {
@@ -18,48 +17,119 @@
       margin-bottom: 30px;
     }
 
+    .session {
+      background-color: #e8f5e9;
+      border: 1px solid #c8e6c9;
+      border-radius: 10px;
+      padding: 15px;
+      margin: 10px auto;
+      width: 90%;
+      max-width: 600px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+
+    .session-title {
+      font-size: 16px;
+      font-weight: bold;
+      color: #388e3c;
+      margin-bottom: 5px;
+    }
+
+    .session-teacher {
+      font-size: 14px;
+      color: #555;
+      margin-bottom: 10px;
+    }
+
     .nav-button {
       background-color: #81c784;
       border: none;
       color: white;
-      padding: 12px 24px;
-      margin: 8px;
-      text-align: center;
-      text-decoration: none;
-      font-size: 16px;
-      border-radius: 8px;
-      transition: background-color 0.3s;
+      padding: 8px 20px;
+      font-size: 14px;
+      border-radius: 6px;
       cursor: pointer;
+      transition: background-color 0.3s;
     }
 
     .nav-button:hover {
       background-color: #66bb6a;
     }
-
-    .button-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      max-width: 600px;
-    }
   </style>
 </head>
 <body>
 
-  <h1>جلسات کورس فیزیولوژی گوارش</h1>
+  <h1>برنامه جلسات کورس فیزیولوژی گوارش</h1>
 
-  <div class="button-container">
+  <div class="session">
+    <div class="session-title">بیماری‌های متابولیک کبد</div>
+    <div class="session-teacher">دکتر شمس پور</div>
     <button class="nav-button" onclick="window.location.href='1.html'">جلسه ۱</button>
+  </div>
+
+  <div class="session">
+    <div class="session-title">داروهای گوارشی</div>
+    <div class="session-teacher">دکتر شمس پور</div>
     <button class="nav-button" onclick="window.location.href='2.html'">جلسه ۲</button>
+  </div>
+
+  <div class="session">
+    <div class="session-title">بیماری‌های پانکراس</div>
+    <div class="session-teacher">دکتر اسلامی</div>
     <button class="nav-button" onclick="window.location.href='3.html'">جلسه ۳</button>
+  </div>
+
+  <div class="session">
+    <div class="session-title">بیماری‌های معده و دئودنوم</div>
+    <div class="session-teacher">دکتر شمس نژاد</div>
     <button class="nav-button" onclick="window.location.href='4.html'">جلسه ۴</button>
+  </div>
+
+  <div class="session">
+    <div class="session-title">بیماری‌های مری</div>
+    <div class="session-teacher">دکتر شمس نژاد</div>
     <button class="nav-button" onclick="window.location.href='5.html'">جلسه ۵</button>
+  </div>
+
+  <div class="session">
+    <div class="session-title">کانسر کبد</div>
+    <div class="session-teacher">دکتر الفت</div>
     <button class="nav-button" onclick="window.location.href='6.html'">جلسه ۶</button>
+  </div>
+
+  <div class="session">
+    <div class="session-title">بیماری‌های روده بزرگ</div>
+    <div class="session-teacher">دکتر احمدی</div>
     <button class="nav-button" onclick="window.location.href='7.html'">جلسه ۷</button>
+  </div>
+
+  <div class="session">
+    <div class="session-title">هپاتیت‌های حاد و مزمن</div>
+    <div class="session-teacher">دکتر احمدی</div>
     <button class="nav-button" onclick="window.location.href='8.html'">جلسه ۸</button>
+  </div>
+
+  <div class="session">
+    <div class="session-title">بیماری‌های روده باریک</div>
+    <div class="session-teacher">دکتر اسلامی</div>
     <button class="nav-button" onclick="window.location.href='9.html'">جلسه ۹</button>
+  </div>
+
+  <div class="session">
+    <div class="session-title">سیروز و گوارش</div>
+    <div class="session-teacher">دکتر شمس نژاد</div>
     <button class="nav-button" onclick="window.location.href='10.html'">جلسه ۱۰</button>
+  </div>
+
+  <div class="session">
+    <div class="session-title">رویکرد آزمایشگاهی به بیماری‌های کبدی</div>
+    <div class="session-teacher">دکتر شمس پور</div>
     <button class="nav-button" onclick="window.location.href='11.html'">جلسه ۱۱</button>
+  </div>
+
+  <div class="session">
+    <div class="session-title">بیماری‌های سیستم صفراوی</div>
+    <div class="session-teacher">دکتر اسلامی</div>
     <button class="nav-button" onclick="window.location.href='12.html'">جلسه ۱۲</button>
   </div>
 
