--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
     /* --- CSS Reset/Normalization Basics --- */
+        body {
+        display: none !important;
+    }
     html {
       box-sizing: border-box;
       -webkit-text-size-adjust: 100%;
