--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
     /* --- CSS Reset/Normalization Basics --- */
-@media print {
-    body {
-        display: none !important;
+    @media print {
+        body {
+            display: none !important;
+        }
     }
-}
     html {
       box-sizing: border-box;
       -webkit-text-size-adjust: 100%;
@@ -185,9 +185,9 @@
       background-color: rgba(255, 255, 255, 0.25);
       color: #000;
     }
-     .iframe-container:fullscreen .fullscreen-btn:hover {
+      .iframe-container:fullscreen .fullscreen-btn:hover {
         background-color: rgba(255, 255, 255, 0.45);
-     }
+      }
 
     footer {
       margin-top: 30px;
@@ -328,8 +328,8 @@
         <li><a onclick="loadSession('OS5odG1s')"><span class="session-number-badge">جلسه ۹</span><span class="session-title-text">سوءجذب</span></a></li>
         <li><a onclick="loadSession('MTAuaHRtbA==')"><span class="session-number-badge">جلسه ۱۰</span><span class="session-title-text">علائم بالینی گوارش</span></a></li>
         <li><a onclick="loadSession('MTEuaHRtbA==')"><span class="session-number-badge">جلسه ۱۱</span><span class="session-title-text">تست‌های کبدی</span></a></li>
-        <li><a onclick="showUIMessage('در حال نوشتن جزوه ...', 'info')"><span class="session-number-badge">جلسه ۱۲</span><span class="session-title-text">سیروز کبدی</span></a></li>
-        <li><a onclick="loadSession('MTMuaHRtbA==')"><span class="session-number-badge">جلسه ۱۳</span><span class="session-title-text">سیستم صفراوی</span></a></li>
+        <li><a onclick="loadSession('MTIuaHRtbA==')"><span class="session-number-badge">جلسه ۱۲</span><span class="session-title-text">سیروز کبدی و عوارض آن</span></a></li>
+        <li><a onclick="loadSession('MTMuaHRtbA==')"><span class="session-number-badge">جلسه ۱۳</span><span class="session-title-text">بیماری‌های سیستم صفراوی</span></a></li>
       </ul>
     </section>
 
